- Document unionCell() method